--- a/client/views/app.html
+++ b/client/views/app.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name='viewport' content='width=device-width' />
   <SocketStream/>
-  <title>Webduino</title>
+  <title>node-webduino</title>
 </head>
 
 <body>
@@ -12,7 +12,7 @@
   <ul>
     <!-- Title Area -->
     <li class="name">
-      <h1><a href="#">Webduino</a></h1>
+      <h1><a href="#">node-webduino</a></h1>
     </li>   
   </ul>
 </nav>
